# mdbook-github-authors

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  Makefile  README.md
.github/workflows/: lint.yml  release.yml  test.yml  test_docs.yml
src/: github_authors.rs  lib.rs
src/template/: authors.hbs
test_book/: book.toml
test_book/src/: SUMMARY.md
test_book/src/chapter_1/: index.md  sub_chapter_1.md  sub_chapter_2.md
tests/: test_preprocessor.rs
