[package]
name = "mdbook-github-authors"
version = "0.1.0"
edition = "2021"
authors = ["Andrei Fajardo <andrei.fajardo@vectorinstitute.ai>"]
description = "mdbook preprocessor to display Github profiles of authors of a page"
license = "MIT"
repository = "https://github.com/VectorInstitute/mdbook-github-authors"
exclude = ["/test_book"]

[[bin]]
name = "mdbook-github-authors"
path = "src/bin/main.rs"

[lib]
name = "mdbook_github_authors"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.96"
clap = { version = "4.5.31", features = ["derive", "std"] }
env_logger = "0.11.6"
handlebars = "6.3.1"
log = "0.4.26"
mdbook = "0.4.44"
once_cell = "1.20.3"
regex = "1.11.1"
rstest = "0.24.0"
serde = "1.0.217"
serde_json = "1.0.139"
