[package]
name = "mdbook-github-authors"
version = "0.1.0"
edition = "2021"
authors = ["Andrei Fajardo <andrei.fajardo@vectorinstitute.ai>"]
description = "mdbook preprocessor to display Github profiles of authors of a page"
license = "MIT"
repository = "https://github.com/VectorInstitute/mdbook-github-authors"
exclude = ["/test_book"]

[[bin]]
name = "mdbook-github-authors"
path = "src/bin/main.rs"

[lib]
name = "mdbook_github_authors"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.36", features = ["derive", "std"] }
env_logger = "0.11.8"
handlebars = "6.3.2"
log = "0.4.27"
mdbook = "0.4.48"
once_cell = "1.21.3"
regex = "1.11.1"
rstest = "0.25.0"
serde = "1.0.219"
serde_json = "1.0.140"
